// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/atoms/GraphNodeDataField.vue snapshot BOOLEAN 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <label
    class=""
  >
    <input
      type="checkbox"
    />
    <!--v-if-->
  </label>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot COLOR 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <div
    class="color-block"
  >
    <button
      class="color-button"
      type="button"
    >
      <div
        class="color-rect"
        style="background-color: rgb(0, 0, 0);"
      />
    </button>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot OBJECT 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <span
    class="select-root"
  >
    <select>
      <option
        value=""
      >
        -- None --
      </option>
      
      
    </select>
  </span>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot SCALER 1`] = `
<div>
  <h5>
    value
  </h5>
  
  <div
    class="slider-wrapper"
  >
    <div
      class="slider-background"
      style="transform: scaleX(0);"
    />
    <input
      type="text"
    />
    <div
      class="slider-forward"
    />
  </div>
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot VECTOR2 1`] = `
<div>
  <h5>
    value
  </h5>
  
  
  <div
    class="row-block inline-field"
  >
    
    <label
      style="width: 20px;"
    >
      x
    </label>
    <div
      class="inline-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0);"
        />
        <input
          type="text"
        />
        <div
          class="slider-forward"
        />
      </div>
      
    </div>
    
  </div>
  <div
    class="row-block inline-field"
  >
    
    <label
      style="width: 20px;"
    >
      y
    </label>
    <div
      class="inline-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0);"
        />
        <input
          type="text"
        />
        <div
          class="slider-forward"
        />
      </div>
      
    </div>
    
  </div>
  
  
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot disabled 1`] = `
<div>
  <h5>
    value
  </h5>
  <div
    class="input-wrapper"
  >
    <input
      disabled=""
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`src/components/atoms/GraphNodeDataField.vue snapshot incompatible types 1`] = `<!--v-if-->`;
